Fix nav title alignment with items

--- a/src/main/content/_assets/css/openliberty.scss
+++ b/src/main/content/_assets/css/openliberty.scss
@@ -567,6 +567,7 @@ a {
 
         #mobile_header {
             display: block;
+            height: 41px;
             padding-top: 9px;
             padding-left: 14px;
             padding-right: 14px;                       
@@ -583,7 +584,12 @@ a {
 
             #mobile_home_logo {
                 width: 37px;
-                height: 27px;            
+                height: 27px;   
+                margin-left: 23px;        
+                
+                @media screen and (max-width: 767px){
+                    margin-left: 0;
+                }
             }
     
             #mobile_header_title {
